# MarketSquare

./: Dockerfile  README.md  compose.yaml  pyproject.toml
marketsquare/: __init__.py  app.py  seed.py
marketsquare/auth/: __init__.py  controller.py  model.py  validators.py
marketsquare/base/: model.py
marketsquare/contact/: __init__.py  controller.py  validators.py
marketsquare/decorators/: login_required.py  logout_required.py
marketsquare/orders/: __init__.py  controller.py  model.py
marketsquare/orders/items/: model.py  validators.py
marketsquare/products/: __init__.py  controller.py  model.py
marketsquare/static/: style.css
marketsquare/templates/: 404.html  base.html  cart.html  contact.html  forgot-password.html  index.html  orders.html  products.html  profile.html  reset-password.html  signin.html  signup.html
marketsquare/templates/tmpls/: _flash.html  _header.html  _product.html
marketsquare/users/: __init__.py  controller.py  model.py  validators.py
marketsquare/utils/: __init__.py  mailer.py  password_strength.py  random_number.py  random_string.py
